//! gRPC server implementations for microservices
//!
//! This module provides gRPC server implementations that wrap the existing business logic
//! from the user-service. These servers act as an adapter layer, allowing other microservices
//! to call the functionality via gRPC instead of having duplicate code.
//!
//! Architecture:
//! - RecommendationService: Wraps recommendation_v2 business logic
//! - VideoService: Wraps video processing and transcoding logic
//! - StreamingService: Wraps live streaming functionality

use tonic::{Response, Status};
use uuid::Uuid;

use crate::grpc::nova::recommendation::v1::{
    recommendation_service_server::RecommendationService as RecommendationServiceTrait, *,
};
use crate::grpc::nova::streaming::v1::{
    streaming_service_server::StreamingService as StreamingServiceTrait, *,
};
use crate::grpc::nova::video::v1::{video_service_server::VideoService as VideoServiceTrait, *};

/// RecommendationServer implements the gRPC RecommendationService
/// This is a proxy/adapter that wraps the existing recommendation_v2 logic
pub struct RecommendationServer;

#[tonic::async_trait]
impl RecommendationServiceTrait for RecommendationServer {
    async fn get_feed(
        &self,
        request: tonic::Request<GetFeedRequest>,
    ) -> Result<Response<GetFeedResponse>, Status> {
        let req = request.into_inner();

        // TODO: Wire this to the existing get_feed handler from handlers/feed.rs
        // For now, return a placeholder implementation
        let response = GetFeedResponse {
            posts: vec![],
            next_cursor: String::new(),
            has_more: false,
        };

        Ok(Response::new(response))
    }

    async fn rank_posts(
        &self,
        request: tonic::Request<RankPostsRequest>,
    ) -> Result<Response<RankPostsResponse>, Status> {
        let req = request.into_inner();

        // TODO: Wire this to the existing ranking logic from services/experiments/
        let response = RankPostsResponse {
            ranked_posts: vec![],
        };

        Ok(Response::new(response))
    }

    async fn get_recommended_creators(
        &self,
        request: tonic::Request<GetRecommendedCreatorsRequest>,
    ) -> Result<Response<GetRecommendedCreatorsResponse>, Status> {
        let req = request.into_inner();

        // TODO: Wire this to the existing creator recommendation logic
        let response = GetRecommendedCreatorsResponse { creators: vec![] };

        Ok(Response::new(response))
    }
}

/// VideoServer implements the gRPC VideoService
/// This is a proxy/adapter that wraps the existing video processing logic
pub struct VideoServer;

#[tonic::async_trait]
impl VideoServiceTrait for VideoServer {
    async fn upload_video(
        &self,
        request: tonic::Request<UploadVideoRequest>,
    ) -> Result<Response<UploadVideoResponse>, Status> {
        let req = request.into_inner();

        // TODO: Wire this to the existing video upload handler
        let video_id = Uuid::new_v4().to_string();
        let upload_session_id = Uuid::new_v4().to_string();

        let response = UploadVideoResponse {
            video_id: video_id.clone(),
            upload_url: format!("https://s3.example.com/{}", video_id),
            upload_session_id,
        };

        Ok(Response::new(response))
    }

    async fn get_video_metadata(
        &self,
        request: tonic::Request<GetVideoMetadataRequest>,
    ) -> Result<Response<VideoMetadata>, Status> {
        let req = request.into_inner();

        // TODO: Wire this to the existing get_video_metadata handler
        let response = VideoMetadata {
            id: req.video_id,
            user_id: String::new(),
            title: String::new(),
            description: String::new(),
            duration: 0,
            width: 0,
            height: 0,
            mime_type: String::new(),
            created_at: 0,
            updated_at: 0,
            thumbnail_url: String::new(),
            status: "unknown".to_string(),
            quality: None,
        };

        Ok(Response::new(response))
    }

    async fn transcode_video(
        &self,
        request: tonic::Request<TranscodeVideoRequest>,
    ) -> Result<Response<TranscodeVideoResponse>, Status> {
        let req = request.into_inner();

        // TODO: Wire this to the existing video transcoding logic
        let job_id = Uuid::new_v4().to_string();

        let response = TranscodeVideoResponse {
            job_id,
            video_id: req.video_id,
            status: "queued".to_string(),
        };

        Ok(Response::new(response))
    }

    async fn get_transcoding_progress(
        &self,
        request: tonic::Request<GetTranscodingProgressRequest>,
    ) -> Result<Response<TranscodingProgress>, Status> {
        let req = request.into_inner();

        // TODO: Wire this to check job queue status
        let response = TranscodingProgress {
            job_id: req.job_id,
            status: "processing".to_string(),
            progress_percent: 50,
            current_resolution: "720p".to_string(),
            estimated_time_remaining: "PT5M".to_string(),
            error_message: String::new(),
        };

        Ok(Response::new(response))
    }

    async fn list_videos(
        &self,
        request: tonic::Request<ListVideosRequest>,
    ) -> Result<Response<ListVideosResponse>, Status> {
        let req = request.into_inner();

        // TODO: Wire this to list videos for user
        let response = ListVideosResponse {
            videos: vec![],
            next_cursor: String::new(),
            has_more: false,
        };

        Ok(Response::new(response))
    }

    async fn delete_video(
        &self,
        request: tonic::Request<DeleteVideoRequest>,
    ) -> Result<Response<DeleteVideoResponse>, Status> {
        let req = request.into_inner();

        // TODO: Wire this to delete video handler
        let response = DeleteVideoResponse {
            video_id: req.video_id,
            success: true,
        };

        Ok(Response::new(response))
    }
}

/// StreamingServer implements the gRPC StreamingService
/// This is a proxy/adapter that wraps the existing live streaming logic
pub struct StreamingServer;

#[tonic::async_trait]
impl StreamingServiceTrait for StreamingServer {
    async fn start_stream(
        &self,
        request: tonic::Request<StartStreamRequest>,
    ) -> Result<Response<StartStreamResponse>, Status> {
        let req = request.into_inner();

        // TODO: Wire this to the existing start stream logic
        let stream_id = Uuid::new_v4().to_string();
        let started_at = std::time::SystemTime::now()
            .duration_since(std::time::UNIX_EPOCH)
            .unwrap()
            .as_secs() as i64;

        let response = StartStreamResponse {
            stream_id: stream_id.clone(),
            ingest_url: "rtmp://stream.example.com/live".to_string(),
            ingest_key: stream_id.clone(),
            playback_url: format!("https://stream.example.com/{}.m3u8", stream_id),
            started_at,
        };

        Ok(Response::new(response))
    }

    async fn stop_stream(
        &self,
        request: tonic::Request<StopStreamRequest>,
    ) -> Result<Response<StopStreamResponse>, Status> {
        let req = request.into_inner();

        // TODO: Wire this to stop stream logic
        let stopped_at = std::time::SystemTime::now()
            .duration_since(std::time::UNIX_EPOCH)
            .unwrap()
            .as_secs() as i64;

        let response = StopStreamResponse {
            stream_id: req.stream_id,
            success: true,
            stopped_at,
        };

        Ok(Response::new(response))
    }

    async fn get_stream_status(
        &self,
        request: tonic::Request<GetStreamStatusRequest>,
    ) -> Result<Response<StreamStatus>, Status> {
        let req = request.into_inner();

        // TODO: Wire this to get stream status from Redis/DB
        let response = StreamStatus {
            stream_id: req.stream_id,
            user_id: String::new(),
            title: String::new(),
            status: "live".to_string(),
            started_at: 0,
            ended_at: 0,
            viewer_count: 0,
            duration_seconds: 0,
            metrics: None,
        };

        Ok(Response::new(response))
    }

    async fn get_streaming_manifest(
        &self,
        request: tonic::Request<GetStreamingManifestRequest>,
    ) -> Result<Response<GetStreamingManifestResponse>, Status> {
        let req = request.into_inner();

        // TODO: Wire this to manifest generation logic
        let response = GetStreamingManifestResponse {
            manifest_url: format!("https://stream.example.com/{}.m3u8", req.stream_id),
            content: String::new(),
            generated_at: 0,
        };

        Ok(Response::new(response))
    }

    async fn update_streaming_profile(
        &self,
        request: tonic::Request<UpdateStreamingProfileRequest>,
    ) -> Result<Response<UpdateStreamingProfileResponse>, Status> {
        let req = request.into_inner();

        // TODO: Wire this to profile update logic
        let response = UpdateStreamingProfileResponse {
            stream_id: req.stream_id,
            success: true,
        };

        Ok(Response::new(response))
    }

    async fn get_stream_analytics(
        &self,
        request: tonic::Request<GetStreamAnalyticsRequest>,
    ) -> Result<Response<GetStreamAnalyticsResponse>, Status> {
        let req = request.into_inner();

        // TODO: Wire this to analytics calculation
        let response = GetStreamAnalyticsResponse {
            analytics: Some(StreamAnalytics {
                stream_id: req.stream_id,
                total_viewers: 0,
                unique_viewers: 0,
                peak_concurrent_viewers: 0,
                average_watch_time_minutes: 0.0,
                engagement_rate: 0.0,
                viewer_count_timeline: vec![],
            }),
        };

        Ok(Response::new(response))
    }

    async fn broadcast_chat_message(
        &self,
        request: tonic::Request<BroadcastChatMessageRequest>,
    ) -> Result<Response<BroadcastChatMessageResponse>, Status> {
        let req = request.into_inner();

        // TODO: Wire this to chat broadcast logic
        let message_id = Uuid::new_v4().to_string();
        let timestamp = std::time::SystemTime::now()
            .duration_since(std::time::UNIX_EPOCH)
            .unwrap()
            .as_secs() as i64;

        let response = BroadcastChatMessageResponse {
            message_id,
            success: true,
            timestamp,
        };

        Ok(Response::new(response))
    }
}
